--- a/buhtig_eda.ipynb
+++ b/buhtig_eda.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d9402844-4b00-478d-abc9-b89ce5765eb2",
+   "metadata": {},
+   "source": [
+    "Cette entreprise utilise un ERP non adapté à ses besoins, ce qui rend l’analyse de ses ventes complexe et laborieuse.\n",
+    "\n",
+    "La mission en 3 étapes :\n",
+    "\n",
+    "- Lier deux exports : un export de l’ERP contenant les références produit, leur prix de vente et leur état de stock, et un export d’une table de l’outil de CMS   contenant les informations des produits commercialisés en ligne (nom, description, nombre de ventes…).\n",
+    "- Présenter le chiffre d’affaires par produit, ainsi que le total du chiffre d’affaires réalisé en ligne.\n",
+    "- Analyse sur la variable des prix des produits afin de détecter d’éventuelles valeurs aberrantes, de les lister et d’en faire une représentation graphique pour plus de lisibilité."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "684730f5",
    "metadata": {
     "tags": []
@@ -242,29 +256,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "78a36201",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1513, 28)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Visualisation du df web\n",
-    "\n",
-    "web.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "0e6f7263",
    "metadata": {},
@@ -409,27 +400,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "40fb6f83",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(825, 5)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "erp.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "id": "028baae8",
    "metadata": {},
@@ -515,28 +485,6 @@
     "# Visualisation du df liaison \n",
     "\n",
     "verif(liaison)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "d0448aa4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(825, 2)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "liaison.shape"
    ]
   },
   {
